# learning_fastapi

./: README.md  crud.py  items_views.py  main.py  pyproject.toml  sqlalchemy_learn.py
alembic/versions/: 2024_10_13_1514-7aaf7745a42b_create_products_table.py  2024_10_13_2019-23d66f46984b_create_user_table.py  2024_10_13_2040-98794b5b511f_create_post_table_and_foreign_key_user.py  2024_10_13_2200-086c6ecaaa6d_create_table_profile.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  post.py  profile.py  user.py
users/: schemas.py  views.py
