[tool.poetry]
name = "learning-fastapi"
version = "0.1.0"
description = "Just my pet project for learning fastapi"
authors = ["Korolev Andrey <andkorolev93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standart"], version = "^0.31.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
